# go_fish_ai

./: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: game.rs  main.rs  neural_network.rs  observer.rs  probability.rs  trainer.rs  util.rs
crates/core/tests/: deck.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
src/: lib.rs  main.rs  neural_network.rs  observer.rs  probability.rs  trainer.rs  util.rs
tests/: deck.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/lib/: types.ts
web/src/routes/: +page.svelte
