[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
fish_core = { path = "../core" }
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console"
]
